@@ -88,7 +88,7 @@
 86.LaTeXOptions.FloatFigures.HelpText=
 87.LaTeXOptions.FloatFigures.Label=Plovouc\u00ed obr\u00e1zky
 88.LaTeXOptions.FloatOptionsLabel.HelpText=
-89.LaTeXOptions.FloatOptionsLabel.Label=Um\u00edst\u011bn\u00ed plovouc\u00edch objekt\u016f
+89.LaTeXOptions.FloatOptionsLabel.Label=Um\u00edst\u011bn\u00ed plovouc\u00edch
 90.LaTeXOptions.FloatOptions.HelpText=
 132.FloatOptions.StringItemList=Naho\u0159e nebo dole na str\u00e1nce
 133.FloatOptions.StringItemList=Naho\u0159e na str\u00e1nce
