@@ -1,0 +1,111 @@
+# LaTeXOptions strings in dutch
+0.LaTeXOptions.HelpText=
+1.LaTeXOptions.Title=LaTeX-opties (Writer2LaTeX)
+2.LaTeXOptions.FixedLine1.HelpText=
+3.LaTeXOptions.FixedLine1.Label=
+4.LaTeXOptions.GeneralLabel.HelpText=
+5.LaTeXOptions.GeneralLabel.Label=Algemeen
+6.LaTeXOptions.ConfigLabel.HelpText=
+7.LaTeXOptions.ConfigLabel.Label=LaTeX-formaat
+8.LaTeXOptions.Config.HelpText=
+137.Config.StringItemList=Extra schoon artikel
+138.Config.StringItemList=Schoon artikel
+139.Config.StringItemList=Standaard
+140.Config.StringItemList=Voor druk geoptimaliseerd
+141.Config.StringItemList=Voor beeldscherm geoptimaliseerd (PDF)
+142.Config.StringItemList=Aangepast
+15.LaTeXOptions.BackendLabel.HelpText=
+16.LaTeXOptions.BackendLabel.Label=Back-end
+17.LaTeXOptions.Backend.HelpText=
+116.Backend.StringItemList=Generiek
+117.Backend.StringItemList=Pdf (pdfTeX)
+118.Backend.StringItemList=PostScript (dvips)
+119.Backend.StringItemList=Ongespecificeerd
+22.LaTeXOptions.InputencodingLabel.HelpText=
+23.LaTeXOptions.InputencodingLabel.Label=Codering
+24.LaTeXOptions.Inputencoding.HelpText=
+120.Inputencoding.StringItemList=US ASCII
+121.Inputencoding.StringItemList=West European (ISO 8859-1)
+122.Inputencoding.StringItemList=East European (ISO 8859-2)
+123.Inputencoding.StringItemList=Latin/Greek (ISO 8859-7)
+124.Inputencoding.StringItemList=Microsoft East European (Cp1250)
+125.Inputencoding.StringItemList=Microsoft Cyrillic (Cp1251)
+126.Inputencoding.StringItemList=Russian (koi8-r)
+127.Inputencoding.StringItemList=Unicode (UTF8)
+33.LaTeXOptions.Multilingual.HelpText=
+34.LaTeXOptions.Multilingual.Label=Schakel multitalig support in
+35.LaTeXOptions.GreekMath.HelpText=
+36.LaTeXOptions.GreekMath.Label=Gebruik Griekse letters als symbolen
+37.LaTeXOptions.AdditionalSymbols.HelpText=
+38.LaTeXOptions.AdditionalSymbols.Label=Ondersteuning van extra symbolen
+39.LaTeXOptions.BibliographyLabel.HelpText=
+40.LaTeXOptions.BibliographyLabel.Label=Bibliografie
+41.LaTeXOptions.UseBibtex.HelpText=
+42.LaTeXOptions.UseBibtex.Label=Gebruik BibTeX voor de bibliografie
+43.LaTeXOptions.BibtexStyleLabel.HelpText=
+44.LaTeXOptions.BibtexStyleLabel.Label=BibTeX-stijl
+45.LaTeXOptions.BibtexStyle.HelpText=
+46.BibtexStyle.StringItemList=plain
+47.BibtexStyle.StringItemList=unsrt
+48.BibtexStyle.StringItemList=alpha
+49.BibtexStyle.StringItemList=abbrv
+50.LaTeXOptions.BibtexStyle.Text=
+51.LaTeXOptions.FilesLabel.HelpText=
+52.LaTeXOptions.FilesLabel.Label=Bestanden
+53.LaTeXOptions.WrapLines.HelpText=
+54.LaTeXOptions.WrapLines.Label=Lange regels afbreken
+55.LaTeXOptions.WrapLinesAfterLabel.HelpText=
+56.LaTeXOptions.WrapLinesAfterLabel.Label=Achter charakteren
+57.LaTeXOptions.WrapLinesAfter.HelpText=
+58.LaTeXOptions.SplitLinkedSections.HelpText=
+59.LaTeXOptions.SplitLinkedSections.Label=Splits document op aan gelinkte secties
+60.LaTeXOptions.SplitToplevelSections.HelpText=
+61.LaTeXOptions.SplitToplevelSections.Label=Splits document op op secties van het bovenste niveau
+62.LaTeXOptions.SaveImagesInSubdir.HelpText=
+63.LaTeXOptions.SaveImagesInSubdir.Label=Sla afbeeldingen in subdirectory op
+64.LaTeXOptions.SpecialContentLabel.HelpText=
+65.LaTeXOptions.SpecialContentLabel.Label=Speciale inhoud
+66.LaTeXOptions.NotesLabel.HelpText=
+67.LaTeXOptions.NotesLabel.Label=Exporteer notities
+68.LaTeXOptions.Notes.HelpText=
+128.Notes.StringItemList=Niet exporteren
+129.Notes.StringItemList=Als commentaren
+130.Notes.StringItemList=Als marginali\u00ebn
+131.Notes.StringItemList=Als pdf-notities
+73.LaTeXOptions.Metadata.HelpText=
+74.LaTeXOptions.Metadata.Label=Exporteer documenteigenschappen (metadata)
+75.LaTeXOptions.FiguresAndTablesLabel.HelpText=
+76.LaTeXOptions.FiguresAndTablesLabel.Label=Grafieken en tabellen
+77.LaTeXOptions.OriginalImageSize.HelpText=
+78.LaTeXOptions.OriginalImageSize.Label=Pas originele grootte toe
+79.LaTeXOptions.OptimizeSimpleTables.HelpText=
+80.LaTeXOptions.OptimizeSimpleTables.Label=Optimaliseer eenvoudige tabellen
+81.LaTeXOptions.SimpleTableLimitLabel.HelpText=
+82.LaTeXOptions.SimpleTableLimitLabel.Label=Maximumbreedte in tekens
+83.LaTeXOptions.SimpleTableLimit.HelpText=
+84.LaTeXOptions.FloatTables.HelpText=
+85.LaTeXOptions.FloatTables.Label=Zwevende tabellen
+86.LaTeXOptions.FloatFigures.HelpText=
+87.LaTeXOptions.FloatFigures.Label=Zwevende grafieken
+88.LaTeXOptions.FloatOptionsLabel.HelpText=
+89.LaTeXOptions.FloatOptionsLabel.Label=Zwevende positie
+90.LaTeXOptions.FloatOptions.HelpText=
+132.FloatOptions.StringItemList=Bovenaan of onderaan op pagina
+133.FloatOptions.StringItemList=Pagina bovenaan
+134.FloatOptions.StringItemList=Pagina onderaan
+135.FloatOptions.StringItemList=Hier of bovenaan op pagina
+136.FloatOptions.StringItemList=Hier of onderaan op pagina
+96.LaTeXOptions.AutoCorrectLabel.HelpText=
+97.LaTeXOptions.AutoCorrectLabel.Label=AutoCorrectie
+98.LaTeXOptions.IgnoreHardPageBreaks.HelpText=
+99.LaTeXOptions.IgnoreHardPageBreaks.Label=Negeer handmatige pagina-eindes
+100.LaTeXOptions.IgnoreHardLineBreaks.HelpText=
+101.LaTeXOptions.IgnoreHardLineBreaks.Label=Negeer handmatige regeleindes
+102.LaTeXOptions.IgnoreEmptyParagraphs.HelpText=
+103.LaTeXOptions.IgnoreEmptyParagraphs.Label=Negeer lege alinea's
+104.LaTeXOptions.IgnoreDoubleSpaces.HelpText=
+105.LaTeXOptions.IgnoreDoubleSpaces.Label=Negeer dubbele spaties
+106.LaTeXOptions.ExportButton.HelpText=
+107.LaTeXOptions.ExportButton.Label=Exporteren
+108.LaTeXOptions.CancelButton.HelpText=
+109.LaTeXOptions.CancelButton.Label=Annuleren
