@@ -88,7 +88,7 @@
 86.LaTeXOptions.FloatFigures.HelpText=
 87.LaTeXOptions.FloatFigures.Label=Figuras flutuantes
 88.LaTeXOptions.FloatOptionsLabel.HelpText=
-89.LaTeXOptions.FloatOptionsLabel.Label=\u00c2ncora de flutua\u00e7\u00e3o
+89.LaTeXOptions.FloatOptionsLabel.Label=Ancorar
 90.LaTeXOptions.FloatOptions.HelpText=
 132.FloatOptions.StringItemList=Topo ou p\u00e9 de p\u00e1gina
 133.FloatOptions.StringItemList=Topo da p\u00e1gina
