@@ -61,7 +61,7 @@
   <dlg:text dlg:id="WrapLinesAfterLabel" dlg:tab-index="17" dlg:left="22" dlg:top="176" dlg:width="90" dlg:height="12" dlg:help-text="&amp;55.LaTeXOptions.WrapLinesAfterLabel.HelpText" dlg:value="&amp;56.LaTeXOptions.WrapLinesAfterLabel.Label"/>
   <dlg:numericfield dlg:id="WrapLinesAfter" dlg:tab-index="18" dlg:left="128" dlg:top="174" dlg:width="32" dlg:height="12" dlg:help-text="&amp;57.LaTeXOptions.WrapLinesAfter.HelpText" dlg:strict-format="true" dlg:decimal-accuracy="0" dlg:value="72" dlg:value-min="1" dlg:value-max="1000" dlg:spin="true" dlg:repeat="50"/>
   <dlg:checkbox dlg:id="SplitLinkedSections" dlg:tab-index="19" dlg:left="12" dlg:top="190" dlg:width="149" dlg:height="12" dlg:help-text="&amp;58.LaTeXOptions.SplitLinkedSections.HelpText" dlg:value="&amp;59.LaTeXOptions.SplitLinkedSections.Label" dlg:checked="false"/>
-  <dlg:checkbox dlg:id="SplitToplevelSections" dlg:tab-index="20" dlg:left="12" dlg:top="204" dlg:width="149" dlg:height="12" dlg:help-text="&amp;60.LaTeXOptions.SplitToplevelSections.HelpText" dlg:value="&amp;61.LaTeXOptions.SplitToplevelSections.Label" dlg:checked="false"/>
+  <dlg:checkbox dlg:id="SplitToplevelSections" dlg:tab-index="20" dlg:left="12" dlg:top="204" dlg:width="160" dlg:height="12" dlg:help-text="&amp;60.LaTeXOptions.SplitToplevelSections.HelpText" dlg:value="&amp;61.LaTeXOptions.SplitToplevelSections.Label" dlg:checked="false"/>
   <dlg:checkbox dlg:id="SaveImagesInSubdir" dlg:tab-index="21" dlg:left="12" dlg:top="218" dlg:width="149" dlg:height="12" dlg:help-text="&amp;62.LaTeXOptions.SaveImagesInSubdir.HelpText" dlg:value="&amp;63.LaTeXOptions.SaveImagesInSubdir.Label" dlg:checked="false"/>
   <dlg:text dlg:id="SpecialContentLabel" dlg:tab-index="22" dlg:left="186" dlg:top="8" dlg:width="156" dlg:height="12" dlg:help-text="&amp;64.LaTeXOptions.SpecialContentLabel.HelpText" dlg:value="&amp;65.LaTeXOptions.SpecialContentLabel.Label"/>
   <dlg:text dlg:id="NotesLabel" dlg:tab-index="23" dlg:left="193" dlg:top="22" dlg:width="47" dlg:height="12" dlg:help-text="&amp;66.LaTeXOptions.NotesLabel.HelpText" dlg:value="&amp;67.LaTeXOptions.NotesLabel.Label"/>
