@@ -1,0 +1,1 @@
+Writer2LaTeX voorziet in exportfilters voor LaTeX en BibTeX
