@@ -15,6 +15,7 @@
     <name lang="da">Writer2LaTeX eksportfiltre</name>
     <name lang="en">Writer2LaTeX export filters</name>
     <name lang="de">Writer2Latex Exportfilter</name>
+    <name lang="nl">Writer2LaTeX exportfilters</name>
     <name lang="es">Writer2LaTeX filtros para exportar</name>
     <name lang="fr">Filtres d'exportation Writer2LaTeX</name>
     <name lang="it">Filtri di esportazione Writer2LaTeX</name>
@@ -30,6 +31,7 @@
     <src xlink:href="desc_da.txt" lang="da" />
     <src xlink:href="desc_en.txt" lang="en" />
     <src xlink:href="desc_de.txt" lang="de" />
+    <src xlink:href="desc_nl.txt" lang="nl" />
     <src xlink:href="desc_es.txt" lang="es" />
     <src xlink:href="desc_fr.txt" lang="fr" />
     <src xlink:href="desc_it.txt" lang="it" />
