@@ -1,0 +1,131 @@
+# Strings for Dialog Library W2XDialogs in dutch 
+0.XhtmlOptions.HelpText=
+1.XhtmlOptions.Title=XHTML-opties (Writer2xhtml)
+2.XhtmlOptions.StyleLabel.HelpText=
+3.XhtmlOptions.StyleLabel.Label=Stijl
+4.XhtmlOptions.ConfigLabel.HelpText=
+5.XhtmlOptions.ConfigLabel.Label=Gebruik stijl
+6.XhtmlOptions.Config.HelpText=
+17.XhtmlOptions.ScalingLabel.HelpText=
+18.XhtmlOptions.ScalingLabel.Label=Schalen
+19.XhtmlOptions.Scaling.HelpText=
+20.XhtmlOptions.ScalingPercentLabel.HelpText=
+21.XhtmlOptions.ScalingPercentLabel.Label=%
+22.XhtmlOptions.ColumnScalingLabel.HelpText=
+23.XhtmlOptions.ColumnScalingLabel.Label=Kolommen schalen
+24.XhtmlOptions.ColumnScaling.HelpText=
+25.XhtmlOptions.ColumnScalingPercentLabel.HelpText=
+26.XhtmlOptions.ColumnScalingPercentLabel.Label=%
+27.XhtmlOptions.ConvertToPx.HelpText=
+28.XhtmlOptions.ConvertToPx.Label=Converteer eenheden naar pixels (px)
+29.XhtmlOptions.OriginalImageSize.HelpText=
+30.XhtmlOptions.OriginalImageSize.Label=Gebruik originele afbeeldingsgrootte
+31.XhtmlOptions.SpecialContentLabel.HelpText=
+32.XhtmlOptions.SpecialContentLabel.Label=Speciale inhoud
+33.XhtmlOptions.Notes.HelpText=
+34.XhtmlOptions.Notes.Label=Exporteer notities
+35.XhtmlOptions.UseDublinCore.HelpText=
+36.XhtmlOptions.UseDublinCore.Label=Exporteer documenteigenschappen (Dublin Core Metadata)
+37.XhtmlOptions.AutoCorrectLabel.HelpText=
+38.XhtmlOptions.AutoCorrectLabel.Label=AutoCorrectie
+39.XhtmlOptions.IgnoreHardLineBreaks.HelpText=
+40.XhtmlOptions.IgnoreHardLineBreaks.Label=Negeer handmatige regeleindes
+41.XhtmlOptions.IgnoreEmptyParagraphs.HelpText=
+42.XhtmlOptions.IgnoreEmptyParagraphs.Label=Negeer lege alinea's
+43.XhtmlOptions.IgnoreDoubleSpaces.HelpText=
+44.XhtmlOptions.IgnoreDoubleSpaces.Label=Negeer dubbele spaties
+45.XhtmlOptions.FilesLabel.HelpText=
+46.XhtmlOptions.FilesLabel.Label=Bestanden
+47.XhtmlOptions.Split.HelpText=
+48.XhtmlOptions.Split.Label=Splits document bij alineakoppen
+49.XhtmlOptions.SplitLevelLabel.HelpText=
+50.XhtmlOptions.SplitLevelLabel.Label=Koppenniveau
+51.XhtmlOptions.SplitLevel.HelpText=
+52.SplitLevel.StringItemList=1
+53.SplitLevel.StringItemList=2
+54.SplitLevel.StringItemList=3
+55.SplitLevel.StringItemList=4
+56.SplitLevel.StringItemList=5
+57.SplitLevel.StringItemList=6
+58.XhtmlOptions.RepeatLevelsLabel.HelpText=
+59.XhtmlOptions.RepeatLevelsLabel.Label=Herhaal koppenniveau
+60.XhtmlOptions.RepeatLevels.HelpText=
+61.RepeatLevels.StringItemList=0
+62.RepeatLevels.StringItemList=1
+63.RepeatLevels.StringItemList=2
+64.RepeatLevels.StringItemList=3
+65.RepeatLevels.StringItemList=4
+66.RepeatLevels.StringItemList=5
+67.XhtmlOptions.SaveImagesInSubdir.HelpText=
+68.XhtmlOptions.SaveImagesInSubdir.Label=Sla plaatjes op in subdirectory
+69.XhtmlOptions.XsltPathLabel.HelpText=
+70.XhtmlOptions.XsltPathLabel.Label=XSLT-pad
+71.XhtmlOptions.XsltPath.HelpText=
+72.XhtmlOptions.XsltPath.Text=
+73.XhtmlOptions.ExportButton.HelpText=
+74.XhtmlOptions.ExportButton.Label=Exporteer
+75.XhtmlOptions.CancelButton.HelpText=
+76.XhtmlOptions.CancelButton.Label=Afbreken
+77.XhtmlOptionsCalc.HelpText=
+78.XhtmlOptionsCalc.Title=XHTML-opties (Calc2xhtml)
+79.XhtmlOptionsCalc.StyleLabel.HelpText=
+80.XhtmlOptionsCalc.StyleLabel.Label=Stijl
+81.XhtmlOptionsCalc.ConfigLabel.HelpText=
+82.XhtmlOptionsCalc.ConfigLabel.Label=Gebruik stijl
+83.XhtmlOptionsCalc.Config.HelpText=
+86.XhtmlOptionsCalc.ScalingLabel.HelpText=
+87.XhtmlOptionsCalc.ScalingLabel.Label=Schalen
+88.XhtmlOptionsCalc.Scaling.HelpText=
+89.XhtmlOptionsCalc.ScalingPercentLabel.HelpText=
+90.XhtmlOptionsCalc.ScalingPercentLabel.Label=%
+91.XhtmlOptionsCalc.ColumnScalingLabel.HelpText=
+92.XhtmlOptionsCalc.ColumnScalingLabel.Label=Kolommen schalen
+93.XhtmlOptionsCalc.ColumnScaling.HelpText=
+94.XhtmlOptionsCalc.ColumnScalingPercentLabel.HelpText=
+95.XhtmlOptionsCalc.ColumnScalingPercentLabel.Label=%
+96.XhtmlOptionsCalc.ConvertToPx.HelpText=
+97.XhtmlOptionsCalc.ConvertToPx.Label=Converteer eenheden naar pixels (px)
+98.XhtmlOptionsCalc.OriginalImageSize.HelpText=
+99.XhtmlOptionsCalc.OriginalImageSize.Label=Gebruik originele afbeeldingsgrootte
+100.XhtmlOptionsCalc.SpecialContentLabel.HelpText=
+101.XhtmlOptionsCalc.SpecialContentLabel.Label=Speciale inhoud
+102.XhtmlOptionsCalc.Notes.HelpText=
+103.XhtmlOptionsCalc.Notes.Label=Exporteer notities
+104.XhtmlOptionsCalc.UseDublinCore.HelpText=
+105.XhtmlOptionsCalc.UseDublinCore.Label=Exporteer documenteigenschappen (Dublin Core Metadata)
+106.XhtmlOptionsCalc.SheetsLabel.HelpText=
+107.XhtmlOptionsCalc.SheetsLabel.Label=Bladen
+108.XhtmlOptionsCalc.DisplayHiddenSheets.HelpText=
+109.XhtmlOptionsCalc.DisplayHiddenSheets.Label=Laat verborgen bladen zien
+110.XhtmlOptionsCalc.DisplayHiddenRowsCols.HelpText=
+111.XhtmlOptionsCalc.DisplayHiddenRowsCols.Label=Laat verborgen rijen en kolommen zien
+112.XhtmlOptionsCalc.DisplayFilteredRowsCols.HelpText=
+113.XhtmlOptionsCalc.DisplayFilteredRowsCols.Label=Laat gefilterde rijen en kolommen zien
+114.XhtmlOptionsCalc.ApplyPrintRanges.HelpText=
+115.XhtmlOptionsCalc.ApplyPrintRanges.Label=Pas afdrukgebieden toe
+116.XhtmlOptionsCalc.UseTitleAsHeading.HelpText=
+117.XhtmlOptionsCalc.UseTitleAsHeading.Label=Gebruik titel als kop
+118.XhtmlOptionsCalc.UseSheetNamesAsHeadings.HelpText=
+119.XhtmlOptionsCalc.UseSheetNamesAsHeadings.Label=Gebruik bladnamen als koppen
+120.XhtmlOptionsCalc.FilesLabel.HelpText=
+121.XhtmlOptionsCalc.FilesLabel.Label=Bestanden
+122.XhtmlOptionsCalc.CalcSplit.HelpText=
+123.XhtmlOptionsCalc.CalcSplit.Label=Sla bladen op in afzonderlijke bestanden
+124.XhtmlOptionsCalc.SaveImagesInSubdir.HelpText=
+125.XhtmlOptionsCalc.SaveImagesInSubdir.Label=Sla plaatjes op in subdirectory
+126.XhtmlOptionsCalc.ExportButton.HelpText=
+127.XhtmlOptionsCalc.ExportButton.Label=Exporteer
+128.XhtmlOptionsCalc.CancelButton.HelpText=
+129.XhtmlOptionsCalc.CancelButton.Label=Annuleren
+130.Config.StringItemList=Origineel formaat
+131.Config.StringItemList=Chocolate
+132.Config.StringItemList=Midnight
+133.Config.StringItemList=Modernist
+134.Config.StringItemList=Oldstyle
+135.Config.StringItemList=Steely
+136.Config.StringItemList=Swiss
+137.Config.StringItemList=Traditional
+138.Config.StringItemList=Ultramarine
+139.Config.StringItemList=Aangepast
+140.Config.StringItemList=Origineel formaat
+141.Config.StringItemList=Aangepast
